--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,7 @@
                 android:layout_width="250dp"
                 android:layout_height="55dp"
                 android:layout_marginTop="20dp"
-                android:background="@color/etextbg"
+                android:background="@drawable/edtext_bg"
                 android:ems="10"
                 android:elevation="5dp"
                 android:hint="@string/txt_LogScreen_Pwd"
