--- a/app/src/main/res/layout/activity_detalhes_produtos.xml
+++ b/app/src/main/res/layout/activity_detalhes_produtos.xml
@@ -13,7 +13,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="312dp">
+            android:layout_height="312dp"
+            android:layout_margin="30px">
 
             <LinearLayout
                 android:layout_width="144dp"
@@ -85,7 +86,7 @@
                 android:layout_width="381dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Button" />
+                android:text="Adicionar ao Carrinho" />
         </LinearLayout>
 
     </LinearLayout>
