--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,7 +5,7 @@
         android:id="@+id/home"
         android:icon="@drawable/ic_home_foreground"/>
 
-    <item android:title="@string/copoes"
+    <item android:title="@string/seccao_senhas"
         android:id="@+id/copoes"
         android:icon="@drawable/ic_copoes_foreground"/>
 
