--- a/app/src/main/res/layout/fragment_qr.xml
+++ b/app/src/main/res/layout/fragment_qr.xml
@@ -5,10 +5,19 @@
     android:layout_height="match_parent"
     tools:context=".QrFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Qr" />
+        android:background="#1BBD9017"
+        android:orientation="vertical">
+
+
+        <Button
+            android:id="@+id/btnScan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Button"
+            android:textAlignment="center" />
+    </LinearLayout>
 
 </FrameLayout>
