--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:title="@string/home"
         android:id="@+id/home"
-        android:icon="@drawable/ic_home_foreground"/>
+        android:icon="@drawable/ic_home_foreground"
+        />
 
     <item android:title="@string/seccao_senhas"
         android:id="@+id/copoes"
-        android:icon="@drawable/ic_copoes_foreground"/>
+        android:icon="@drawable/ic_copoes_foreground"
+        />
 
     <item android:title="@string/qr"
         android:id="@+id/qr"
-        android:icon="@drawable/ic_qr_scanner_foreground"/>
+        android:icon="@drawable/ic_qr_scanner_foreground"
+
+        />
 
     <item android:title="@string/settings"
         android:id="@+id/settings"
-        android:icon="@drawable/ic_settings_foreground" />
+        android:icon="@drawable/ic_settings_foreground"
+        />
 
 </menu>
