--- a/app/src/main/res/layout/fragment_senha.xml
+++ b/app/src/main/res/layout/fragment_senha.xml
@@ -6,7 +6,7 @@
 
     android:background="#19B6B628"
     android:padding="30px"
-    tools:context=".SenhaFragment">
+    tools:context=".Views.SenhaFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
