--- a/app/src/main/res/layout/item_seccao.xml
+++ b/app/src/main/res/layout/item_seccao.xml
@@ -7,17 +7,19 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="61dp"
+        android:layout_height="50dp"
         android:background="#19B6B628"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tvNomeSeccao"
-            android:layout_width="match_parent"
-            android:layout_height="43dp"
-            android:layout_marginTop="50px"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
             android:text="TextView"
-            android:textAlignment="center" />
+
+            />
     </LinearLayout>
 
 </LinearLayout>
