--- a/app/src/main/res/layout/fragment_moradas.xml
+++ b/app/src/main/res/layout/fragment_moradas.xml
@@ -34,4 +34,13 @@
 
     </LinearLayout>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAddList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="20dp"
+        android:clickable="true"
+        android:src="@drawable/ic_action_add" />
+
 </FrameLayout>
