--- a/app/src/main/res/menu/upper_nav_menu.xml
+++ b/app/src/main/res/menu/upper_nav_menu.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/dropdown"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:title="Encomendas"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/search_icon"
         android:icon="@drawable/ic_search_white_foreground"
         android:title="@string/carrinho_nav"
@@ -13,8 +19,8 @@
         android:title="@string/carrinho_nav"
         app:showAsAction="always"/>
     <item
-        android:id="@+id/dropdown"
-        android:title="Encomendas"
+        android:id="@+id/logout"
+        android:title="logout"
         app:showAsAction="never" />
 
 
