--- a/app/src/main/res/layout/activity_encomenda.xml
+++ b/app/src/main/res/layout/activity_encomenda.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Views.EncomendaActivity">
+    android:background="#F4EBEB"
+    tools:context=".Views.HomeFragment">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ListView
+        android:id="@+id/lvEncomendas"
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#48FBFBFB"
+        android:cacheColorHint="#FFFFFF" />
+
+</LinearLayout>
