--- a/app/src/main/res/layout/activity_detalhes_encomenda.xml
+++ b/app/src/main/res/layout/activity_detalhes_encomenda.xml
@@ -142,13 +142,24 @@
                 android:textSize="18sp" />
         </LinearLayout>
 
-        <View
+        <TextView
+            android:id="@+id/textView4"
             android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@android:color/darker_gray"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"/>
+            android:layout_height="39dp"
+            android:layout_marginTop="30dp"
+            android:paddingLeft="20dp"
+            android:text="Linhas da Encomenda :"
+            android:textColor="#7E2196F3"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <ListView
+            android:id="@+id/lvLinhasEncomenda"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp" />
 
     </LinearLayout>
 
