--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,17 @@
     android:background="#F4EBEB"
     tools:context=".Views.HomeFragment">
 
+    <TextView
+        android:id="@+id/tvNenhumProduto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:visibility="invisible"
+        android:text="Nenhum produto encontrado"/>
+
     <ListView
         android:id="@+id/lvProdutos"
         android:divider="@null"
