--- a/app/src/main/res/layout/activity_carrinho.xml
+++ b/app/src/main/res/layout/activity_carrinho.xml
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="start"
-                android:text="Sub-total:"
+                android:text="@string/txt_sub_total"
                 android:textSize="20sp" />
 
             <TextView
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="end"
-                android:text="$0.00"
+                android:text="@string/txt_no_value"
                 android:textSize="20sp" />
         </LinearLayout>
         <LinearLayout
@@ -46,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="start"
-                android:text="Iva:"
+                android:text="@string/txt_iva"
                 android:textSize="20sp" />
 
             <TextView
@@ -54,7 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="end"
-                android:text="$0.00"
+                android:text="@string/txt_no_value"
                 android:textSize="20sp" />
         </LinearLayout>
         <LinearLayout
@@ -67,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="start"
-                android:text="Desconto:"
+                android:text="@string/txt_desconto"
                 android:textSize="20sp" />
 
             <TextView
@@ -75,10 +75,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="end"
-                android:text="$0.00"
+                android:text="@string/txt_no_value"
                 android:textSize="20sp" />
-        </LinearLayout>
-        <LinearLayout
+                        </LinearLayout>
+                            <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -88,7 +88,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="start"
-                android:text="Total:"
+                android:text="@string/txt_total"
                 android:textSize="20sp" />
 
             <TextView
@@ -96,7 +96,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="end"
-                android:text="$0.00"
+                android:text="@string/txt_no_value"
                 android:textSize="20sp" />
         </LinearLayout>
     </LinearLayout>
@@ -105,7 +105,7 @@
         android:id="@+id/checkout_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Checkout"
+        android:text="@string/txt_checkout"
         android:textSize="20sp" />
 
 </LinearLayout>
