--- a/app/src/main/res/layout/activity_detalhes_encomenda.xml
+++ b/app/src/main/res/layout/activity_detalhes_encomenda.xml
@@ -148,7 +148,7 @@
             android:layout_height="39dp"
             android:layout_marginTop="30dp"
             android:paddingLeft="20dp"
-            android:text="Linhas da Encomenda :"
+            android:text="@string/txt_linhas_da_encomenda"
             android:textColor="#7E2196F3"
             android:textSize="20sp"
             android:textStyle="bold" />
